--- a/less/header.less
+++ b/less/header.less
@@ -1,5 +1,7 @@
 header {
-  height: 15rem;
+  height: 22rem;
+  padding-top: 7rem;
+  margin-bottom: 2rem;
   width: 100%;
   //background: url("../images/art-balloons-birthday.jpg");
   //background: url("../images/blurred-blurry-hd-wallpaper.jpg");
